--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,4 @@
 **/*.log
 **/log/
 
-# Dependency directories
-**/node_modules/
-
-# Temp directories for docker
-temp/
-
-# Unused directories
-**/wp-content/uploads
-**/wp-content/upgrade
-**/wp-content/languages
-
-
-.htaccess
-
-docker/**/tmp/
-
-.env
-vendor
+**/*.class
